# materials_datasets

./: README.md  pyproject.toml
polymer_band_gap_computational/: README.md  convert.ipynb
polymer_tendency_to_crystalize/: README  convert.ipynb
