[project]
name = "materials-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "psmiles[polybert]",
    "pyarrow>=20.0.0",
]

[tool.uv.sources]
psmiles = { git = "https://github.com/Ramprasad-Group/psmiles.git" }
